--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -18,6 +18,6 @@ jobs:
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           goversion: 1.20.4
-          project_path: "./serv/recaptcha-serv"
+          project_path: "./serv"
           binary_name: "recaptcha-serv"
           extra_files: LICENSE README.md doc
